--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         }
     </script>
                  
-    <script src="./bundle.js"></script>
+    <!-- <script src="./bundle.js"></script> -->
 
 </body>
 </html>
