--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
             <div class="logo">
                 <img src="logo-garantibbva-2x.png" alt="Garanti BBVA Logo">
             </div>
+            <span class="enviroment">
+                PRODUCTION
+            </span>
             <div class="top-bar-right">
                 <span>USD 34,0150 %0,02</span>
                 <span class="user-info">
