--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <img src="logo-garantibbva-2x.png" alt="Garanti BBVA Logo">
             </div>
             <span class="enviroment">
-                PRODUCTION
+                TEST
             </span>
             <div class="top-bar-right">
                 <span>USD 34,0150 %0,02</span>
